# chameleon-artifacts

./: README.md
chameleon/iot-spe/iot-spe-common/: CMakeLists.txt
chameleon/iot-spe/iot-spe-common/include/: PrecompiledHeaders.hpp
chameleon/iot-spe/iot-spe-common/include/Configurations/: BaseConfiguration.hpp  BaseOption.hpp  ConfigOptions.md  ConfigurationException.hpp  EnumOption.hpp  ScalarOption.hpp  SequenceOption.hpp  TypedBaseOption.hpp  WorkerConfigurationKeys.hpp  WorkerPropertyKeys.hpp  WrapOption.hpp
chameleon/iot-spe/iot-spe-common/include/Exceptions/: ErrorListener.hpp  NotImplementedException.hpp  RuntimeException.hpp  SignalHandling.hpp
chameleon/iot-spe/iot-spe-common/include/Util/: AtomicCounter.hpp  BlockingQueue.hpp  Common.hpp  DisableWarningsPragma.hpp  DumpHelper.hpp  FileMutex.hpp  NonBlockingMonotonicSeqQueue.hpp  PluginRegistry.hpp  SourceLocation.hpp  StacktraceLoader.hpp  StdInt.hpp  ThreadBarrier.hpp  ThreadNaming.hpp  Timer.hpp  VirtualEnableSharedFromThis.hpp
chameleon/iot-spe/iot-spe-common/src/: CMakeLists.txt
chameleon/iot-spe/iot-spe-common/src/Configurations/: BaseConfiguration.cpp  BaseOption.cpp  CMakeLists.txt  ConfigurationException.cpp
chameleon/iot-spe/iot-spe-common/src/Exceptions/: CMakeLists.txt  NotImplementedException.cpp  RuntimeException.cpp  SignalHandling.cpp
chameleon/iot-spe/iot-spe-common/src/Util/: CMakeLists.txt  Common.cpp  CommonUtilityFunctions.cpp  DumpHelper.cpp  FileMutex.cpp  NonBlockingMonotonicSeqQueue.cpp  StacktraceLoader.cpp  ThreadNaming.cpp
chameleon/iot-spe/iot-spe-common/tests/: CMakeLists.txt
chameleon/iot-spe/iot-spe-core/: CMakeLists.txt
chameleon/iot-spe/iot-spe-core/include/API/: Query.hpp  QueryAPI.hpp  WindowedQuery.hpp  Windowing.hpp
chameleon/iot-spe/iot-spe-core/include/Components/: NesCoordinator.hpp  NesWorker.hpp
chameleon/iot-spe/iot-spe-core/include/Configurations/: ConfigurationOption.hpp  ConfigurationsNames.hpp
chameleon/iot-spe/iot-spe-core/include/Constraints/: Constraint.hpp  NeedWorkerWithConfiguredConstraint.hpp
chameleon/iot-spe/iot-spe-core/include/Exceptions/: AccessNonLockedResourceException.hpp  CoordinatesOutOfRangeException.hpp  ExecutionNodeNotFoundException.hpp  ExecutionPlanRollbackException.hpp  GlobalQueryPlanUpdateException.hpp  InvalidArgumentException.hpp  InvalidCoordinateFormatException.hpp  InvalidFieldException.hpp  InvalidLogicalOperatorException.hpp  InvalidOperatorStateException.hpp  InvalidQueryException.hpp  InvalidQueryStateException.hpp  LocationProviderException.hpp  LogicalSourceNotFoundException.hpp  MapEntryNotFoundException.hpp  NesNetworkError.hpp  OperatorNotFoundException.hpp  PhysicalSourceNotFoundException.hpp  QueryDeploymentException.hpp  QueryNotFoundException.hpp  QueryPlacementException.hpp  QueryUndeploymentException.hpp  RPCQueryUndeploymentException.hpp  RequestExecutionException.hpp  RequestTypeNotHandledException.hpp  ResourceLockingException.hpp  RpcException.hpp  SharedQueryPlanNotFoundException.hpp  SignatureComputationException.hpp  StorageHandlerAcquireResourcesException.hpp  TaskExecutionException.hpp  TypeInferenceException.hpp  UDFException.hpp  WindowProcessingException.hpp
chameleon/iot-spe/iot-spe-core/include/GRPC/: CallData.hpp  CoordinatorRPCClient.hpp  CoordinatorRPCServer.hpp  GRPCLibraryInitializer.hpp  HealthCheckRPCServer.hpp  WorkerRPCClient.hpp  WorkerRPCServer.hpp
chameleon/iot-spe/iot-spe-core/include/Listeners/: QueryStatusListener.hpp
chameleon/iot-spe/iot-spe-core/include/Monitoring/: MonitoringAgent.hpp  MonitoringCatalog.hpp  MonitoringForwardRefs.hpp  MonitoringManager.hpp  MonitoringPlan.hpp
chameleon/iot-spe/iot-spe-core/include/Network/: NetworkManager.hpp  NetworkSink.hpp  NetworkSource.hpp  ZmqServer.hpp
chameleon/iot-spe/iot-spe-core/include/Nodes/: Node.hpp
chameleon/iot-spe/iot-spe-core/include/Operators/: OperatorForwardDeclaration.hpp  OperatorNode.hpp  OriginId.hpp
chameleon/iot-spe/iot-spe-core/include/Parsers/: Readme.txt
chameleon/iot-spe/iot-spe-core/include/Phases/: ConvertLogicalToPhysicalSink.hpp  ConvertLogicalToPhysicalSource.hpp
chameleon/iot-spe/iot-spe-core/include/QueryCompiler/: DefaultQueryCompiler.hpp  NautilusQueryCompiler.hpp  PipelineContext.hpp  QueryCompilationError.hpp  QueryCompilationRequest.hpp  QueryCompilationResult.hpp  QueryCompiler.hpp  QueryCompilerForwardDeclaration.hpp  QueryCompilerOptions.hpp
chameleon/iot-spe/iot-spe-core/include/REST/: RestServer.hpp  RestServerInterruptHandler.hpp  ServerTypes.hpp
chameleon/iot-spe/iot-spe-core/include/RequestProcessor/: AsyncRequestProcessor.hpp
chameleon/iot-spe/iot-spe-core/include/Runtime/: AbstractLineageManager.hpp  AsyncTaskExecutor.hpp  InMemoryLineageManager.hpp  MaterializedViewManager.hpp  NodeEngine.hpp  NodeEngineBuilder.hpp  QueryExecutionMode.hpp  QueryManager.hpp  QueryStatistics.hpp  RuntimeForwardRefs.hpp  Task.hpp  ThreadPool.hpp
chameleon/iot-spe/iot-spe-core/include/Sensors/: GenericBus.hpp  I2CBus.hpp
chameleon/iot-spe/iot-spe-core/include/Services/: AbstractHealthCheckService.hpp  CoordinatorHealthCheckService.hpp  LocationService.hpp  MonitoringService.hpp  QueryCatalogService.hpp  QueryParsingService.hpp  QueryService.hpp  ReplicationService.hpp  RequestProcessorService.hpp  SourceCatalogService.hpp  TopologyManagerService.hpp  WorkerHealthCheckService.hpp
chameleon/iot-spe/iot-spe-core/include/Sinks/: SinkCreator.hpp  SinksForwaredRefs.hpp
chameleon/iot-spe/iot-spe-core/include/Sources/: ArrowSource.hpp  BenchmarkSource.hpp  BinarySource.hpp  CSVSource.hpp  DataSource.hpp  DefaultSource.hpp  GeneratorSource.hpp  KafkaSource.hpp  LambdaSource.hpp  MQTTSource.hpp  MaterializedViewSource.hpp  MemorySource.hpp  MonitoringSource.hpp  OPCSource.hpp  SenseSource.hpp  SourceCreator.hpp  SourcesForwardedRefs.hpp  SourcesForwaredRefs.hpp  StaticDataSource.hpp  TCPSource.hpp  ZmqSource.hpp
chameleon/iot-spe/iot-spe-core/tests/: CMakeLists.txt
chameleon/iot-spe/iot-spe-data-types/: CMakeLists.txt
chameleon/iot-spe/iot-spe-data-types/tests/: CMakeLists.txt
(+2786 files in other folders)
